implementing fuel classifier